Fix figure captions on center aligned images

--- a/scss/modules/media.scss
+++ b/scss/modules/media.scss
@@ -3,10 +3,9 @@
  */
 div.align-center img,
 figure.align-center {
-  display: block;
   margin-left: auto;
   margin-right: auto;
-  width: max-content;
+  width: auto;
 }
 
 /**
